set device not use scale

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!-- saved from url=(0047)https://demo.mycodes.net/daima/jiandanjisuanqi/ -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>网页版简单计算器</title>
-
+<title>朴实无华且枯燥的计算器</title>
+<meta name="viewport" content="width=device-width, initial-scale=2.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <style type="text/css">
 *{margin:0;padding:0;}
 body{font-size:14px;font-family:"微软雅黑";color:#666;background:#666;}
@@ -100,7 +100,7 @@ function funback(){
 
 	<div id="container">
 		<form name="computer">
-		<h3>网页版简单计算器</h3>
+		<h3>朴实无华且枯燥的计算器</h3>
 		<input type="text" id="text2" name="text2" class="text2" disabled="disabled" value="">
 		<input type="text" id="text" name="text" class="text" disabled="disabled" value="0">
 			<div class="buttons">
