--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ function getResult(){
 		if(data.value == 5211314){
 			alert("我爱你，亲爱的");
 			text2.value = "《我愿意为你》";
-			document.getElementById("ido").innerHTML='<audio controls="controls" id="audio_player" style="display:none;"> <source src="https://m10.music.126.net/20210528015717/b06a2906d5781bc4c9a3a8d10528e879/ymusic/2eb8/c87c/dd48/e30e5c323d53066e911b050dc6e7d2ec.mp3" > </audio><embed id="MPlayer_Alert" src="https://m10.music.126.net/20210528015717/b06a2906d5781bc4c9a3a8d10528e879/ymusic/2eb8/c87c/dd48/e30e5c323d53066e911b050dc6e7d2ec.mp3" loop="false" width="0px" height="0px" /></embed>';
+			document.getElementById("ido").innerHTML='<audio controls="controls" id="audio_player" style="display:none;"> <source src="./16221643002564.mp3" > </audio><embed id="MPlayer_Alert" src="./16221643002564.mp3" loop="false" width="0px" height="0px" /></embed>';
 			document.getElementById("audio_player").play();
 		}
 		clearmsg = true;
